启动脚本重制